# twin

./: .clang-format  .gitignore  BUGS  COPYING  COPYING.LIB  Changelog.txt  INSTALL  MakePaths  MakeRules  MakeShlibs  Makefile  Makefile.am  Makefile.in  Makefile.sub  README  README.CVS  README.git  README.md  README.porting  Rules  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  flake.nix  makeautoconf.in  makerules  makerules.in  makeversion  missing_checks  system.twenvrc.sh  system.twinrc  theme.ini  twenvrc.sh  twin-0.2.6.lsm  twin-0.2.7.lsm  twin-0.2.8.lsm  (+11 more)
CVS/: Entries
TODO/: TODO  twin-thoughts
TODOS/: TODO  twin-thoughts
admin/: aclocal.m4  after-bootstrap-touch-files.sh  bootstrap-clean.sh  bootstrap.sh  config.guess  (+7 more)
clients/: .depend  .modules  Makefile  Makefile.am  Makefile.in  Makefile.sub  README.twsetroot  attach.c  cat.c  clip.c  clutter.c  cuckoo.c  demo.c  demo2.c  demo3.c  dialog.c  dm.c  edit.c  event.c  findtwin.c  fm.c  lsmsgport.c  lsobj.c  pty.c  pty.h  restackM.c  restackW.c  sendmsg.c  setroot.c  setroot.sample  sysmon.c  term.c  term.h  threadtest.c  tt_test.c  tterm.c  tterm.h  twsetroot.sample  util.c  util.h
clients/CVS/: Entries  Repository
clients/mapscrn/: .depend  .modules  CHANGES  Makefile  Makefile.in  Makefile.sub  README  defines.h  findfile.c  findfile.h  getfd.c  getfd.h  kdmapop.c  kdmapop.h  m_version.h  mapscrn.c  nls.h  paths.h  utf8.c  utf8.h  version.h  xmalloc.c  xmalloc.h
clients/mapscrn/CVS/: Entries  Repository
include/Tutf/: Doxyfile  Makefile  Makefile.am  Makefile.in  Makefile.sub  Tutf.h  Tutf_defs.h  Tutftypes.h  adobe_stdenc.h  adobe_symbol.h  apl_iso_ir_68.h  apple_arabic.h  apple_celtic.h  apple_centeuro.h  apple_chinsimp.h  apple_chintrad.h  apple_croatian.h  apple_cyrillic.h  apple_devanaga.h  apple_dingbats.h  apple_farsi.h  apple_gaelic.h  apple_greek.h  apple_gujarati.h  apple_gurmukhi.h  apple_hebrew.h  apple_iceland.h  apple_inuit.h  apple_japanese.h  apple_korean.h  apple_roman.h  apple_romanian.h  apple_symbol.h  apple_thai.h  apple_turkish.h  apple_ukraine.h  ascii.h  atarist.h  compiler.h  cp1006.h  (+111 more)
include/Tutf/CVS/: Entries  Repository
include/Tw/: Doxyfile  Makefile  Makefile.am  Makefile.in  Makefile.sub  Tw++.h  Tw.h  Tw1.h  Tw_1.h  Tw_defs.h  Twavl.h  Twerrno.h  Twkeys.h  Twstat.h  Twstat_defs.h  Twtypes.h  alias.h  alias1.h  alias1_m4.h  alias_m4.h  common1_gen.h  common1_m4.h  common_gen.h  common_m4.h  compiler.h  datasizes.h  datatypes.h  makeversion  missing.h  mouse.h  osincludes.h  pagesize.h  prefix.h  proto1_gen.h  proto1_m4.h  proto_gen.h  proto_m4.h  stattypes.h  unprefix.h  version.h  (+2 more)
include/Tw/CVS/: Entries  Repository  Root
include/Tw/m4/: alias.m4  alias.m4h  alias1.m4  alias1.m4h  common.m4  common.m4h  common1.m4  common1.m4h  proto.m4  proto.m4h  proto1.m4  proto1.m4h
include/Tw/m4/CVS/: Entries  Repository
libs/libtstl/: Makefile.am  Makefile.in  alloc.cpp  chars.cpp  err.cpp  fmt.cpp  string.cpp  to_chars.cpp  utf8.cpp
server/: .depend  .modules  .twinrc  Makefile  Makefile.am  Makefile.in  Makefile.sub  after  algo.h  alloc.c  alloc.cpp  alloc.h  before  builtin.c  builtin.cpp  builtin.h  common.h  data.c  data.cpp  data.h  display.c  display.cpp  dl.c  dl.cpp  dl.h  dl_common.h  dl_dynamic.cpp  dl_helper.c  dl_helper.cpp  dl_helper.h  dl_static.cpp  draw.c  draw.cpp  draw.h  extensions.c  extensions.h  extreg.c  extreg.cpp  extreg.h  fdlist.h  (+104 more)
server/CVS/: Entries  Repository
server/HW/: .depend  .modules  Makefile  Makefile.sub  hw_X11.c  hw_X11.h  hw_X11_gfx_common0.h  hw_X11_gfx_common1.h  hw_X11_gfx_common2.h  hw_dirty.h  hw_display.c  hw_display.h  hw_gfx.c  hw_gfx.h  hw_ggi.c  hw_ggi.h  hw_null.c  hw_null.h  hw_tty.c  hw_tty.h  hw_tty_linux.c  hw_tty_termcap.c  hw_tty_termcap.h  hw_twin.c  hw_twin.h
server/HW/CVS/: Entries  Repository
server/HW/hw_tty_common/: Makefile.sub  driver_termcap.h  driver_termcap1.h  kbd_stdin.h  mouse_xterm.h
server/HW/hw_tty_linux/: driver_linux.h  kbd_raw.h  kbd_raw1.h  mouse_gpm.h  video_stdout.h  video_vcsa.h
server/extensions/: Makefile.in  Makefile.sub  ext_TT.c  ext_TT.cpp  ext_TT.h  ext_query.c  ext_query.cpp  ext_query.h
server/extensions/CVS/: Entries  Repository
server/hw/: Makefile.am  Makefile.in  hw_X11.c  hw_X11.cpp  hw_X11.h  hw_X11_gfx_common0.h  hw_X11_gfx_common1.h  hw_X11_gfx_common2.h  hw_all.cpp  hw_all.h  hw_dirty.h  hw_display.c  hw_display.cpp  hw_display.h  hw_gfx.c  hw_gfx.cpp  hw_gfx.h  hw_ggi.c  hw_ggi.cpp  hw_ggi.h  hw_tty.c  hw_tty.cpp  hw_tty.h  hw_twin.c  hw_twin.cpp  hw_twin.h  hw_x11.cpp  hw_x11.h  hw_xft.c  hw_xft.cpp  hw_xft.h
server/hw/hw_tty_common/: decls.h  driver_generic.h  driver_term_decls.h  driver_termcap.h  driver_termcap_decls.h  driver_termcap_includes.h  driver_xterm.h  kbd_stdin.h  mouse_xterm.h
server/hw/hw_tty_linux/: driver_linux.h  kbd_bitops.h  kbd_raw.h  kbd_raw1.h  mouse_gpm.h  video_stdout.h  video_vcsa.h
server/hw/hw_x/: check_hw_name.c  common.c  common.cpp  common.h  common_protos.h  driver.h  features.h  flavor.h  flavor_protos.h  keyboard.h  probex11.cpp  tuft_function.h  util.h  util_protos.h  x11_autodetect.c  x11_data.h  x11_quitflavor.c  x11_utf32_to_charset.c  x11alloccolor.h  x11setcolors.h  xchar16.h
server/hw/hw_xft/: check_hw_name.c  x11_autodetect.c  x11_quitflavor.c  x11_utf32_to_charset.c  x11_utf32_to_charset.h  x11alloccolor.h  x11setcolors.h  xchar16.h
server/m4/: socket1.m4  socket1.m4h  socket1macros.m4  socket2.m4  socket2.m4h  socket2macros.m4  socket3.m4  socket3.m4h  socket3macros.m4
server/m4/CVS/: Entries  Repository
server/stl/: utf8.cpp
server/themes/hw_gfx/: README  absolute-e_8x16.xpm  icewm_8x16.xpm  mono_9x19.xpm
themes/hw_gfx/: Ganymede_8x16.xpm  Ganymede_9x19.xpm  Makefile  Makefile.am  Makefile.in  Makefile.sub  README  README.txt  ShinyMetal_6x13.xpm  ShinyMetal_8x16.xpm  goldenblue_9x19.xpm  granite_8x16.xpm  granite_9x19.xpm  icewm_8x16.xpm  icewm_9x19.xpm  kde2_9x19.xpm  mac_8x16.xpm  mac_9x19.xpm  mono_8x16.xpm
themes/hw_gfx/CVS/: Entries  Repository
(+552 files in other folders)
